[gd_scene load_steps=77 format=2]

[ext_resource path="res://Scenes/SnowTileset.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/DirtTileset.tres" type="TileSet" id=2]
[ext_resource path="res://Sprites/Madeline/idle08.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Madeline/bangs00.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Madeline/idle00.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Madeline/idle01.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Madeline/idle02.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Madeline/idle03.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Madeline/idle05.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Madeline/idle06.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Madeline/idle07.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Madeline/idle04.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Madeline/walk06.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Madeline/walk05.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Madeline/walk00.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Madeline/walk04.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Madeline/walk01.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Madeline/walk02.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Madeline/walk03.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Madeline/walk07.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Madeline/walk11.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Madeline/runFast07.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Madeline/runFast05.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Madeline/runFast04.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Madeline/runFast06.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Madeline/runFast09.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Madeline/runFast01.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Madeline/runFast08.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Madeline/walk08.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Madeline/runFast00.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Madeline/walk10.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Madeline/runFast03.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Madeline/runFast10.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Madeline/walk09.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Madeline/runFast02.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Madeline/runFast11.png" type="Texture" id=36]
[ext_resource path="res://Scripts/Madeline.gd" type="Script" id=37]
[ext_resource path="res://Sprites/Madeline/jumpFast01.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Madeline/jumpFast00.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Madeline/jumpFast02.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Madeline/jumpFast03.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Madeline/dash00.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Madeline/dash02.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Madeline/dash03.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Madeline/dash01.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Madeline/death_h00.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Madeline/death_h05.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Madeline/death_h06.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Madeline/death_h09.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Madeline/death_h01.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Madeline/death_h03.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Madeline/death_h07.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Madeline/death_h08.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Madeline/death_h10.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Madeline/death_h11.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Madeline/death_h13.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Madeline/death_h12.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Madeline/death_h14.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Madeline/death_h02.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Madeline/death_h04.png" type="Texture" id=60]
[ext_resource path="res://Sprites/Ground/bridge_b.png" type="Texture" id=61]
[ext_resource path="res://Sprites/Ground/Spikes/default_right00.png" type="Texture" id=62]
[ext_resource path="res://Sprites/Background/CityFront.png" type="Texture" id=63]
[ext_resource path="res://Sprites/Background/StarryBackdrop.png" type="Texture" id=64]
[ext_resource path="res://Sprites/Madeline/duck.png" type="Texture" id=65]
[ext_resource path="res://Themes/CurseCasual.tres" type="DynamicFont" id=66]
[ext_resource path="res://Sprites/Background/Escape.png" type="Texture" id=67]
[ext_resource path="res://Sprites/Background/big_sign_d.png" type="Texture" id=68]
[ext_resource path="res://Sprites/Background/x.png" type="Texture" id=69]
[ext_resource path="res://Sprites/Background/z.png" type="Texture" id=70]
[ext_resource path="res://Music/Celeste_Resurrections.mp3" type="AudioStream" id=71]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.3803, 10.2988 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 253.422, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.03661, 11.8252 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.5165, 7.77296 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 20 ), ExtResource( 29 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 21 ) ],
"loop": true,
"name": "walk",
"speed": 30.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 38 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": false,
"name": "jump",
"speed": 15.0
}, {
"frames": [ ExtResource( 46 ), ExtResource( 50 ), ExtResource( 59 ), ExtResource( 51 ), ExtResource( 60 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 49 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 57 ), ExtResource( 56 ), ExtResource( 58 ) ],
"loop": false,
"name": "death",
"speed": 30.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 45 ), ExtResource( 43 ), ExtResource( 44 ) ],
"loop": false,
"name": "dash",
"speed": 30.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 27 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 33 ), ExtResource( 36 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ ExtResource( 65 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 71 )
volume_db = -25.31
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 184, -80 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="StarryBackdrop" type="Sprite" parent="."]
position = Vector2( 177.919, -67.7073 )
scale = Vector2( 0.412461, 0.412461 )
texture = ExtResource( 64 )

[node name="CityFront" type="Sprite" parent="."]
position = Vector2( 197.368, -12.1703 )
scale = Vector2( 0.298018, 0.224523 )
texture = ExtResource( 63 )

[node name="big_sign_d" type="Sprite" parent="."]
position = Vector2( 21.194, -60.5222 )
scale = Vector2( 0.889853, 0.889853 )
texture = ExtResource( 68 )

[node name="ColorRect" type="ColorRect" parent="big_sign_d"]
margin_left = -29.0
margin_top = -45.0
margin_right = 29.0
margin_bottom = 38.0
color = Color( 0.0117647, 0.0235294, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="z" type="Sprite" parent="big_sign_d"]
position = Vector2( -17.4243, -28.4141 )
scale = Vector2( 0.225737, 0.225737 )
texture = ExtResource( 70 )

[node name="Label" type="Label" parent="big_sign_d/z"]
margin_left = 47.0419
margin_top = -25.3723
margin_right = 175.042
margin_bottom = 21.6277
custom_fonts/font = ExtResource( 66 )
text = "Jump"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="Sprite" parent="big_sign_d"]
position = Vector2( -17.4243, -3.90308 )
scale = Vector2( 0.225737, 0.225737 )
texture = ExtResource( 69 )

[node name="Label" type="Label" parent="big_sign_d/x"]
margin_left = 47.0
margin_top = -25.0
margin_right = 175.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 66 )
text = "Dash"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Esc" type="Sprite" parent="big_sign_d"]
position = Vector2( -17.4243, 20.3932 )
scale = Vector2( 0.225737, 0.225737 )
texture = ExtResource( 67 )

[node name="Label" type="Label" parent="big_sign_d/Esc"]
margin_left = 47.0
margin_top = -25.0
margin_right = 175.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 66 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( -2359299, 10, 0, -2293763, 10, 0, -2359248, 13, 0, -2228227, 10, 0, -2293712, 13, 0, -2162691, 10, 0, -2228176, 13, 0, -2097155, 10, 0, -2162640, 13, 0, -2031619, 10, 0, -2097104, 13, 0, -1966083, 10, 0, -2031568, 13, 0, -1900547, 10, 0, -1966032, 13, 0, -1835011, 10, 0, -1900496, 13, 0, -1769475, 10, 0, -1834960, 13, 0, -1703939, 10, 0, -1769424, 13, 0, -1638403, 10, 0, -1703888, 13, 0, -1572867, 10, 0, -1638352, 12, 0, -1507331, 10, 0, -1572816, 12, 0, -1441795, 10, 0, -1507280, 12, 0, -1376259, 10, 0, -1441744, 12, 0, -1310723, 10, 0, -1376208, 12, 0, -1245187, 10, 0, -1310672, 13, 0, -1179651, 10, 0, -1245136, 13, 0, -1114115, 10, 0, -1179600, 13, 0, -1048579, 10, 0, -1048578, 3, 0, -1048577, 2, 0, -1114112, 2, 0, -1114111, 0, 0, -1114110, 2, 0, -1114109, 2, 0, -1114108, 2, 0, -1114107, 0, 0, -1114106, 2, 0, -1114105, 0, 0, -1114104, 1, 0, -1114103, 2, 0, -1114102, 2, 0, -1114101, 3, 0, -1114100, 0, 0, -1114099, 19, 0, -1114064, 12, 0, -983043, 10, 0, -983042, 11, 0, -983041, 5, 0, -1048576, 5, 0, -1048575, 5, 0, -1048574, 5, 0, -1048573, 5, 0, -1048572, 5, 0, -1048571, 11, 0, -1048570, 11, 0, -1048569, 11, 0, -1048568, 5, 0, -1048567, 5, 0, -1048566, 11, 0, -1048565, 5, 0, -1048564, 11, 0, -1048563, 10, 0, -1048528, 12, 0, -917507, 10, 0, -917506, 8, 0, -917505, 6, 0, -983040, 7, 0, -983039, 8, 0, -983038, 8, 0, -983037, 6, 0, -983036, 7, 0, -983035, 6, 0, -983034, 8, 0, -983033, 8, 0, -983032, 7, 0, -983031, 6, 0, -983030, 8, 0, -983029, 8, 0, -983028, 7, 0, -983027, 8, 0, -982992, 12, 0, -851971, 10, 0, -917456, 12, 0, -786435, 10, 0, -851920, 13, 0, -720899, 10, 0, -786384, 13, 0, -655363, 10, 0, -720848, 13, 0, -589827, 10, 0, -655323, 16, 0, -655322, 2, 0, -655321, 3, 0, -655320, 1, 0, -655319, 3, 0, -655318, 3, 0, -655317, 1, 0, -655316, 1, 0, -655315, 19, 0, -655312, 12, 0, -524291, 10, 0, -589787, 13, 0, -589786, 5, 0, -589785, 5, 0, -589784, 5, 0, -589783, 11, 0, -589782, 14, 0, -589781, 11, 0, -589780, 5, 0, -589779, 10, 0, -589776, 12, 0, -458755, 10, 0, -524251, 12, 0, -524250, 11, 0, -524249, 11, 0, -524248, 5, 0, -524247, 11, 0, -524246, 11, 0, -524245, 5, 0, -524244, 14, 0, -524243, 10, 0, -524240, 12, 0, -393219, 10, 0, -458715, 12, 0, -458714, 11, 0, -458713, 11, 0, -458712, 4, 0, -458711, 5, 0, -458710, 11, 0, -458709, 14, 0, -458708, 5, 0, -458707, 10, 0, -458704, 13, 0, -327683, 10, 0, -393179, 13, 0, -393178, 11, 0, -393177, 14, 0, -393176, 11, 0, -393175, 11, 0, -393174, 11, 0, -393173, 14, 0, -393172, 14, 0, -393171, 10, 0, -393168, 13, 0, -262147, 10, 0, -327643, 13, 0, -327642, 5, 0, -327641, 14, 0, -327640, 14, 0, -327639, 5, 0, -327638, 5, 0, -327637, 11, 0, -327636, 11, 0, -327635, 10, 0, -327632, 13, 0, -196611, 10, 0, -262107, 13, 0, -262106, 5, 0, -262105, 11, 0, -262104, 5, 0, -262103, 14, 0, -262102, 14, 0, -262101, 5, 0, -262100, 11, 0, -262099, 10, 0, -262096, 12, 0, -131075, 10, 0, -196571, 13, 0, -196570, 5, 0, -196569, 11, 0, -196568, 5, 0, -196567, 5, 0, -196566, 5, 0, -196565, 5, 0, -196564, 11, 0, -196563, 10, 0, -196560, 12, 0, -65539, 10, 0, -131035, 6, 0, -131034, 7, 0, -131033, 6, 0, -131032, 7, 0, -131031, 8, 0, -131030, 7, 0, -131029, 8, 0, -131028, 7, 0, -131027, 10, 0, -131024, 12, 0, -3, 10, 0, -65488, 12, 0, 65533, 10, 0, 48, 13, 0, 131069, 0, 0, 131070, 3, 0, 131071, 0, 0, 65536, 3, 0, 65537, 2, 0, 65538, 1, 0, 65539, 3, 0, 65540, 1, 0, 65541, 19, 0, 65545, 16, 0, 65546, 1, 0, 65547, 0, 0, 65548, 3, 0, 65549, 2, 0, 65550, 1, 0, 65551, 19, 0, 65584, 13, 0, 196605, 11, 0, 196606, 11, 0, 196607, 11, 0, 131072, 5, 0, 131073, 5, 0, 131074, 5, 0, 131075, 11, 0, 131076, 11, 0, 131077, 10, 0, 131083, 17, 0, 131085, 17, 0, 131120, 12, 0, 262141, 11, 0, 262142, 11, 0, 262143, 11, 0, 196608, 11, 0, 196609, 5, 0, 196610, 11, 0, 196611, 11, 0, 196612, 5, 0, 196613, 10, 0, 196619, 17, 0, 196621, 17, 0, 196656, 12, 0, 327677, 11, 0, 327678, 11, 0, 327679, 11, 0, 262144, 5, 0, 262145, 11, 0, 262146, 4, 0, 262147, 5, 0, 262148, 11, 0, 262149, 10, 0, 262155, 15, 0, 262157, 15, 0, 262192, 13, 0, 327728, 12, 0 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( -2293744, 10, 0, -2293743, 4, 0, -2293742, 4, 0, -2293741, 4, 0, -2293740, 4, 0, -2293739, 13, 0, -2228208, 10, 0, -2228207, 4, 0, -2228206, 4, 0, -2228205, 4, 0, -2228204, 4, 0, -2228203, 13, 0, -2162672, 10, 0, -2162671, 4, 0, -2162670, 4, 0, -2162669, 4, 0, -2162668, 4, 0, -2162667, 13, 0, -2097136, 10, 0, -2097135, 4, 0, -2097134, 4, 0, -2097133, 4, 0, -2097132, 4, 0, -2097131, 13, 0, -2031600, 10, 0, -2031599, 4, 0, -2031598, 4, 0, -2031597, 4, 0, -2031596, 4, 0, -2031595, 13, 0, -1966064, 10, 0, -1966063, 4, 0, -1966062, 4, 0, -1966061, 4, 0, -1966060, 4, 0, -1966059, 13, 0, -1900528, 10, 0, -1900527, 4, 0, -1900526, 4, 0, -1900525, 4, 0, -1900524, 4, 0, -1900523, 13, 0, -1834992, 10, 0, -1834991, 4, 0, -1834990, 4, 0, -1834989, 4, 0, -1834988, 4, 0, -1834987, 13, 0, -1769456, 10, 0, -1769455, 4, 0, -1769454, 4, 0, -1769453, 4, 0, -1769452, 4, 0, -1769451, 13, 0, -1703920, 10, 0, -1703919, 4, 0, -1703918, 4, 0, -1703917, 4, 0, -1703916, 4, 0, -1703915, 13, 0, -1638384, 10, 0, -1638383, 9, 0, -1638382, 9, 0, -1638381, 4, 0, -1638380, 4, 0, -1638379, 13, 0, -1572848, 10, 0, -1572847, 9, 0, -1572846, 4, 0, -1572845, 4, 0, -1572844, 4, 0, -1572843, 13, 0, -1507312, 10, 0, -1507311, 4, 0, -1507310, 4, 0, -1507309, 9, 0, -1507308, 4, 0, -1507307, 13, 0, -1441776, 10, 0, -1441775, 4, 0, -1441774, 4, 0, -1441773, 9, 0, -1441772, 4, 0, -1441771, 13, 0, -1376240, 10, 0, -1376239, 4, 0, -1376238, 4, 0, -1376237, 9, 0, -1376236, 4, 0, -1376235, 13, 0, -1310704, 10, 0, -1310703, 4, 0, -1310702, 4, 0, -1310701, 9, 0, -1310700, 4, 0, -1310699, 13, 0, -1245168, 10, 0, -1245167, 4, 0, -1245166, 4, 0, -1245165, 9, 0, -1245164, 4, 0, -1245163, 13, 0, -1245156, 14, 0, -1245155, 2, 0, -1245154, 2, 0, -1245153, 0, 0, -1245152, 1, 0, -1245151, 14, 0, -1179632, 10, 0, -1179631, 4, 0, -1179630, 9, 0, -1179629, 9, 0, -1179628, 4, 0, -1179627, 13, 0, -1179620, 10, 0, -1179619, 4, 0, -1179618, 4, 0, -1179617, 4, 0, -1179616, 4, 0, -1179615, 13, 0, -1114096, 10, 0, -1114095, 4, 0, -1114094, 9, 0, -1114093, 9, 0, -1114092, 4, 0, -1114091, 13, 0, -1114084, 14, 0, -1114083, 9, 0, -1114082, 9, 0, -1114081, 9, 0, -1114080, 4, 0, -1114079, 13, 0, -1048560, 10, 0, -1048559, 4, 0, -1048558, 9, 0, -1048557, 9, 0, -1048556, 4, 0, -1048555, 13, 0, -1048548, 14, 0, -1048547, 9, 0, -1048546, 9, 0, -1048545, 9, 0, -1048544, 4, 0, -1048543, 13, 0, -983024, 10, 0, -983023, 4, 0, -983022, 9, 0, -983021, 9, 0, -983020, 4, 0, -983019, 13, 0, -983012, 7, 0, -983011, 6, 0, -983010, 6, 0, -983009, 5, 0, -983008, 5, 0, -983007, 3, 0, -917488, 10, 0, -917487, 9, 0, -917486, 9, 0, -917485, 9, 0, -917484, 4, 0, -917483, 13, 0, -851952, 10, 0, -851951, 9, 0, -851950, 9, 0, -851949, 9, 0, -851948, 4, 0, -851947, 13, 0, -786416, 10, 0, -786415, 9, 0, -786414, 9, 0, -786413, 9, 0, -786412, 4, 0, -786411, 13, 0, -720880, 10, 0, -720879, 9, 0, -720878, 9, 0, -720877, 9, 0, -720876, 4, 0, -720875, 13, 0, -655344, 10, 0, -655343, 9, 0, -655342, 4, 0, -655341, 9, 0, -655340, 4, 0, -655339, 13, 0, -655333, 12, 0, -655332, 0, 0, -655331, 1, 0, -655330, 0, 0, -655329, 1, 0, -655328, 1, 0, -655327, 0, 0, -655326, 14, 0, -589808, 10, 0, -589807, 4, 0, -589806, 4, 0, -589805, 4, 0, -589804, 4, 0, -589803, 13, 0, -589797, 10, 0, -589796, 4, 0, -589795, 4, 0, -589794, 4, 0, -589793, 4, 0, -589792, 4, 0, -589791, 4, 0, -589790, 13, 0, -524272, 10, 0, -524271, 4, 0, -524270, 4, 0, -524269, 9, 0, -524268, 9, 0, -524267, 13, 0, -524261, 10, 0, -524260, 9, 0, -524259, 4, 0, -524258, 4, 0, -524257, 4, 0, -524256, 4, 0, -524255, 4, 0, -524254, 13, 0, -458736, 10, 0, -458735, 4, 0, -458734, 4, 0, -458733, 4, 0, -458732, 4, 0, -458731, 13, 0, -458725, 10, 0, -458724, 9, 0, -458723, 9, 0, -458722, 9, 0, -458721, 9, 0, -458720, 4, 0, -458719, 4, 0, -458718, 13, 0, -393200, 10, 0, -393199, 4, 0, -393198, 4, 0, -393197, 4, 0, -393196, 9, 0, -393195, 13, 0, -393189, 10, 0, -393188, 9, 0, -393187, 9, 0, -393186, 4, 0, -393185, 4, 0, -393184, 4, 0, -393183, 4, 0, -393182, 13, 0, -327665, 12, 0, -327664, 5, 0, -327663, 6, 0, -327662, 6, 0, -327661, 5, 0, -327660, 5, 0, -327659, 3, 0, -327653, 10, 0, -327652, 9, 0, -327651, 4, 0, -327650, 4, 0, -327649, 9, 0, -327648, 4, 0, -327647, 4, 0, -327646, 13, 0, -262117, 10, 0, -262116, 4, 0, -262115, 4, 0, -262114, 4, 0, -262113, 9, 0, -262112, 4, 0, -262111, 4, 0, -262110, 13, 0, -196581, 10, 0, -196580, 4, 0, -196579, 4, 0, -196578, 9, 0, -196577, 9, 0, -196576, 4, 0, -196575, 4, 0, -196574, 13, 0, -131045, 10, 0, -131044, 4, 0, -131043, 9, 0, -131042, 9, 0, -131041, 9, 0, -131040, 4, 0, -131039, 4, 0, -131038, 13, 0, -65509, 10, 0, -65508, 4, 0, -65507, 9, 0, -65506, 9, 0, -65505, 9, 0, -65504, 4, 0, -65503, 4, 0, -65502, 13, 0, 27, 10, 0, 28, 4, 0, 29, 4, 0, 30, 4, 0, 31, 4, 0, 32, 4, 0, 33, 4, 0, 34, 13, 0, 65554, 12, 0, 65555, 2, 0, 65556, 2, 0, 65557, 0, 0, 65558, 0, 0, 65559, 2, 0, 65560, 2, 0, 65561, 2, 0, 65562, 1, 0, 65563, 11, 0, 65564, 4, 0, 65565, 9, 0, 65566, 9, 0, 65567, 4, 0, 65568, 4, 0, 65569, 4, 0, 65570, 13, 0, 131090, 10, 0, 131091, 4, 0, 131092, 4, 0, 131093, 9, 0, 131094, 4, 0, 131095, 4, 0, 131096, 4, 0, 131097, 4, 0, 131098, 9, 0, 131099, 4, 0, 131100, 4, 0, 131101, 9, 0, 131102, 9, 0, 131103, 9, 0, 131104, 4, 0, 131105, 4, 0, 131106, 13, 0, 196626, 10, 0, 196627, 4, 0, 196628, 9, 0, 196629, 9, 0, 196630, 9, 0, 196631, 4, 0, 196632, 4, 0, 196633, 4, 0, 196634, 9, 0, 196635, 9, 0, 196636, 9, 0, 196637, 9, 0, 196638, 9, 0, 196639, 9, 0, 196640, 9, 0, 196641, 4, 0, 196642, 13, 0, 262162, 10, 0, 262163, 4, 0, 262164, 4, 0, 262165, 9, 0, 262166, 4, 0, 262167, 9, 0, 262168, 9, 0, 262169, 9, 0, 262170, 9, 0, 262171, 4, 0, 262172, 4, 0, 262173, 4, 0, 262174, 4, 0, 262175, 4, 0, 262176, 4, 0, 262177, 4, 0, 262178, 13, 0 )

[node name="Bridge" type="StaticBody2D" parent="."]
position = Vector2( 200, -152 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge"]
position = Vector2( 0, 10.326 )
shape = SubResource( 1 )
one_way_collision = true

[node name="bridge_b" type="Sprite" parent="Bridge"]
texture = ExtResource( 61 )

[node name="KillPlane" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillPlane"]
position = Vector2( 187.744, 57.9478 )
shape = SubResource( 2 )

[node name="default_right02" type="Sprite" parent="KillPlane"]
position = Vector2( -11.3549, -155.522 )
texture = ExtResource( 62 )

[node name="default_right01" type="Sprite" parent="KillPlane"]
position = Vector2( -11.6526, -147.387 )
texture = ExtResource( 62 )

[node name="default_right00" type="Sprite" parent="KillPlane"]
position = Vector2( -11.274, -140.131 )
texture = ExtResource( 62 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KillPlane"]
position = Vector2( -12.6057, -148.459 )
shape = SubResource( 3 )

[node name="Madeline" type="KinematicBody2D" parent="."]
script = ExtResource( 37 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Madeline"]
position = Vector2( -1.454, 0.287 )
shape = SubResource( 4 )

[node name="Hair" type="Sprite" parent="Madeline"]
texture = ExtResource( 4 )
offset = Vector2( 0, -2.518 )

[node name="Herself" type="AnimatedSprite" parent="Madeline"]
position = Vector2( 0, -8 )
frames = SubResource( 5 )
animation = "crouch"
playing = true

[node name="WalkTimer" type="Timer" parent="Madeline"]
wait_time = 0.2
one_shot = true

[node name="RespawnTimer" type="Timer" parent="Madeline"]
wait_time = 2.0
one_shot = true

[node name="MadelineNoises" type="AudioStreamPlayer2D" parent="Madeline"]

[connection signal="body_entered" from="KillPlane" to="Madeline" method="_on_KillPlane_enter"]
[connection signal="timeout" from="Madeline/WalkTimer" to="Madeline" method="_WalkCooldownUp"]
[connection signal="timeout" from="Madeline/RespawnTimer" to="Madeline" method="Respawn"]
